# Exercise

./: CMakeLists.txt  main.cpp
chapter10/: stock01.cpp  stock01.h  stock10.cpp  stock10.h  stock20.cpp  stock20.h  usestock01.cpp  usestock10.cpp
chapter11/: mytime0.cpp  mytime0.h  mytime1.cpp  mytime1.h  mytime3.cpp  mytime3.h  usetime0.cpp  usetime1.cpp  usetime3.cpp
chapter12/: string1.cpp  string1.h  stringbad.cpp  stringbad.h  usestringbad.cpp
